syntax = "proto3";
option java_multiple_files = true;
package org.shayana;

service Appointment{
rpc checkAvailability(CheckAvailabilityRequest) returns (stream SmartResponse);
rpc makeAppointment(AppointmentRequest) returns(SmartResponse);
rpc cancelAppointment(CancellationRequest) returns(SmartResponse);
}

message CheckAvailabilityRequest{
string serviceId=1;
}

message SmartResponse{
optional string message=1;
bool success=2;
bool isAvailable=3;
}

message CancellationRequest{
string serviceId=1;
string clientId=2;
}

message AppointmentRequest{
string serviceId=1;
string clientId=2;
}
