syntax = "proto3";
option java_multiple_files = true;
package org.shayana;

service PriceList{
rpc listPriceList(PriceListRequest) returns(stream PriceListResponse);
rpc addToPriceList(PriceListAddRequest) returns(stream PriceListResponse);
rpc removeFromPriceList(PriceListRemoveRequest) returns(stream PriceListResponse);
}

message PriceListRequest{
bool showall=1;
int64 starttime=2;
int64 endtime=3;
}

message PriceListResponse{
bool success=1;
repeated Service services=2;
optional string message=3;

}

message PriceListAddRequest{
repeated Service services=1;
}

message Service{
  string serviceId=1;
  string serviceName=2;
  int32 cost=3;
<<<<<<< HEAD
  string timeoffered=4;
=======
  int64 timeoffered=4;
>>>>>>> 7c5c0b0 (Setup the server)
  int32 slots=5;
}

message PriceListRemoveRequest{
string serviceId=1;
}

